--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	margin:0;
 }
 body{
-	background-image:url('images/2.jpg');
+	background-image:url('images/3.pngg');
 }
 .zagolovok{
 	position: fixed;
