--- a/style.css
+++ b/style.css
@@ -1,10 +1,77 @@
 *{
 	box-sizing: border-box;
 	margin:0;
+	padding: 0;
 }
 body{
-	background-image:url('images/3.png');
+	background-image:url('images/at1.gif');
+	/*background-color: black;*/
 }
+section{
+	position: relative;
+	width: 100%;
+	min-height: 620;
+	background-image: url('images/3.png');
+	overflow: hidden;
+}
+section .wave{
+	position: absolute;
+	bottom:0;
+	left: 0;
+	width: 100%;
+	height:100px;
+	background: url(images/wave.png);
+	background-size: 1000px 100px;	
+}
+section .wave.wave1{
+	animation: animate 30s linear infinite;
+	z-index: 1000;
+	opacity: 0.3;
+	animation-delay: 0s;
+	/*bottom: 0;*/
+}
+section .wave.wave2{
+	animation: animate2 15s linear infinite;
+	z-index: 999;
+	opacity: 0.5;
+	animation-delay: -5s;
+	/*bottom: 10px;*/
+}
+section .wave.wave3{
+	animation: animate2 15s linear infinite;
+	z-index: 998;
+	opacity: 0.2;
+	animation-delay: -2s;
+	/*bottom: 15px;*/
+}
+section .wave.wave4{
+	animation: animate2 15s linear infinite;
+	z-index: 997;
+	opacity: 0.2;
+	animation-delay: -2s;
+	bottom: 20px;
+}
+@keyframes animate{
+	0%
+	{
+		background-position-x:0; 
+	}
+	100%
+	{
+		background-position-x:1000px; 
+	}
+}
+@keyframes animate2{
+	0%
+	{
+		background-position-x:0; 
+	}
+	100%
+	{
+		background-position-x:-1000px; 
+	}
+}
+
 .zagolovok{
 	position: fixed;
 	width:100%;
@@ -32,6 +99,7 @@ games{
 }
 games:hover{
 	background-color:rgba(204, 0, 102,0.89);
+	box-shadow: 0 0 70px rgba(204, 0, 102,0.89);
 }
 .block{
 	width:100%;
