--- a/Змійка/styleZmi.css
+++ b/Змійка/styleZmi.css
@@ -4,6 +4,8 @@
 }
 #window{
 	margin-left: 30%;
+	float: left;
+	margin-right: 2%;
 }
 .zagolovok{
 	width:100%;
@@ -18,67 +20,6 @@
 body{
 	background-image:url("Images/bg.jpg");
 }
-section{
-	position: relative;
-	width: 100%;
-	min-height: 757px;
-	background-image: url('images/3.jpg');
-	overflow: hidden;
-}
-section .wave{
-	position: absolute;
-	bottom:0;
-	left: 0;
-	width: 100%;
-	height:100px;
-	background: url(images/wave.png);
-	background-size: 1000px 100px;	
-}
-section .wave.wave1{
-	animation: animate 30s linear infinite;
-	z-index: 1000;
-	opacity: 0.3;
-	animation-delay: 0s;
-	bottom: 0;
-}
-section .wave.wave2{
-	animation: animate2 15s linear infinite;
-	z-index: 999;
-	opacity: 0.5;
-	animation-delay: -5s;
-	bottom: 10px;
-}
-section .wave.wave3{
-	animation: animate2 15s linear infinite;
-	z-index: 998;
-	opacity: 0.2;
-	animation-delay: -2s;
-	bottom: 15px;
-}
-section .wave.wave4{
-	animation: animate2 15s linear infinite;
-	z-index: 997;
-	opacity: 0.2;
-	animation-delay: -2s;
-	bottom: 20px;
-}
-@keyframes animate{
-	0%
-	{
-		background-position-x:0; 
-	}
-	100%
-	{
-		background-position-x:1000px; 
-	}
-}
-@keyframes animate2{
-	0%
-	{
-		background-position-x:0; 
-	}
-	100%
-	{
-		background-position-x:-1000px; 
-	}
+#control{
+	float: left; 
 }
