--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 iframe{
 	float:left;
 	margin-top: 85px;
-	border: red solid 10px;
+	border: ##BE4A3C solid 10px;
 	border-radius: 10px;
 }
 section{
