--- a/puzzle-game/style.css
+++ b/puzzle-game/style.css
@@ -4,21 +4,30 @@ html {
 
 body {
   height: 100%;
-  background-image: linear-gradient(#7B9F35, #226666);
+  background-image: url(Images/bg.jpg);
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
+.zagolovok{
+  width:100%;
+  background-color:rgba(0,0,0,0.7);
+  color:white;
+  font-size:120%;
+  font-family:Century Gothic;
+}
+.zagolovok:hover{
+  color:red;
+}
 .game {
   /* position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); */
+  margin-top:6%;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
   padding: 15px;
-  background-color: #AA3939;
+  background-color: black;
   border-radius: 5px;
 }
 
