--- a/Atari/style.css
+++ b/Atari/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url(Images/1.jpg);
+	background-image:url(Images/1.png);
 }
 canvas { 
 	background-image:url(Images/bg.jpg);
