--- a/Змійка/styleZmi.css
+++ b/Змійка/styleZmi.css
@@ -3,8 +3,8 @@
 	margin:0;
 }
 #window{
-	/*margin-top:0.1%;*/
-	margin-left: 19%;
+	margin-top:0.09%;
+	margin-left: 7%;
 	float: left;
 	margin-right: 1%;
 }
